--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.6.0",
     "react": "^17.0.1",
+    "react-bootstrap-icons": "^1.3.0",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.2",
+    "react-textarea-autosize": "^8.3.1",
     "redux": "^4.0.5",
     "styled-components": "^5.2.1",
     "web-vitals": "^1.0.1"
